Previous GPU work (e.g. MD)

--- a/references.bib
+++ b/references.bib
@@ -449,10 +449,14 @@
 	Year = {2016}}
 
 @article{cloud_OSPREY,
-	Author = {Pan, Yuchao and Dong, Yuxi and Zhou, Jingtian and Hallen, Mark and Donald, Bruce R. and Zeng, Jianyang and Wei Xu},
-	Note = {Submitted manuscript},
-	Title = {c{OSPREY}: A Cloud-Based Distributed Algorithm for Large-Scale Computational Protein Design},
-	Year = {2015}}
+ author = {Pan, Yuchao and Dong, Yuxi and Zhou, Jingtian and Hallen, Mark and Donald, Bruce R. and Zeng, Jianyang and Wei Xu},
+ title = {c{OSPREY}: A Cloud-Based Distributed Algorithm for Large-Scale Computational Protein Design},
+ year = {2016},
+ journal={Journal of Computational Biology},
+ volume={23},
+ number={9},
+ pages={737-749}
+}
 
 @article{PartCR_HOT,
 	Author = {Roberts, Kyle E. and Donald, Bruce R.},
@@ -2222,3 +2226,53 @@
   author={Nvidia, CUDA},
   year={2010}
 }
+
+@book{GPU_QM,
+  title={Electronic Structure Calculations on Graphics Processing Units: From Quantum Chemistry to Condensed Matter Physics},
+  author={Walker, Ross C. and Goetz, Andreas W.},
+  year={2016},
+  publisher={John Wiley \& Sons}
+}
+
+@article{AMBER_gpu_microseconds,
+  title={Routine microsecond molecular dynamics simulations with {AMBER on GPUs}. 2. Explicit solvent particle mesh {Ewald}},
+  author={Salomon-Ferrer, Romelia and G\"otz, Andreas W. and Poole, Duncan and Le Grand, Scott and Walker, Ross C.},
+  journal={Journal of Chemical Theory and Computation},
+  volume={9},
+  number={9},
+  pages={3878-3888},
+  year={2013},
+  publisher={ACS Publications}
+}
+
+@article{HOOMD_GPU,
+  title={Strong scaling of general-purpose molecular dynamics simulations on GPUs},
+  author={Glaser, Jens and Nguyen, Trung Dac and Anderson, Joshua A. and Lui, Pak and Spiga, Filippo and Millan, Jaime A and Morse, David C. and Glotzer, Sharon C.},
+  journal={Computer Physics Communications},
+  volume={192},
+  pages={97-107},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@inproceedings{ResNet,
+  title={Deep residual learning for image recognition},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={770-778},
+  year={2016}
+}
+
+@inproceedings{GPU_crypto,
+  title={Exploiting the power of GPUs for asymmetric cryptography},
+  author={Szerwinski, Robert and G{\"u}neysu, Tim},
+  booktitle={International Workshop on Cryptographic Hardware and Embedded Systems},
+  pages={79-99},
+  year={2008},
+  organization={Springer}
+}
+
+
+
+
+
