--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -50,7 +50,7 @@
 
 \definecolor{background-color}{gray}{0.98}
 
-\title{{\sc osprey} 3.0: Open-Source Protein Redesign for You, Refactored, with Powerful New Features}
+\title{{\sc osprey} 3.0: Open-Source Protein Redesign for You, with Powerful New Features}
 \author{Mark A. Hallen$^{\ddagger,1,3}$, Jeffrey W. Martin$^{\ddagger,1}$, Adegoke Ojewole$^{\dagger,4}$, \\
 Jonathan D. Jou$^{\dagger,1}$, Anna U. Lowegard$^{\dagger,4}$, Marcel S. Frenkel$^5$, Pablo Gainza$^1$, \\
 Hunter M. Nisonoff$^1$, Aditya Mukund$^1$, Siyu Wang$^4$, Graham T. Holt$^4$, David Zhou$^1$, \\
