--- a/CATS.tex
+++ b/CATS.tex
@@ -6,6 +6,6 @@
 \label{fig:cats}
 \end{figure}
 
-This flexibility is enabled by the CATS algorithm~\cite{CATS} (Fig.~\ref{fig:cats}).  CATS uses a new parameterization of backbone conformational space, along with the voxel framework that {\sc osprey} has always included.  It is equivalent to searching over all changes in backbone dihedrals ($\phi$ and $\psi$) subject to keeping the protein conformation constant outside of a specified flexible region. CATS includes an efficient Taylor series-based algorithm for computing atomic coordinates from its new degrees of freedom, enabling efficient energy minimization.  Unlike previous protein design algorithms with backbone flexibility, CATS routinely finds backbone motions on the order of an angstrom while still performing a comprehensive search of its backbone conformation space.  In Ref.~\citen{CATS}, we have shown that backbone flexibility as modeled by CATS is sometimes critical for avoiding nonphysical steric clashes (Fig.~\ref{fig:cats}B,C) and often affects energetics significantly.  For example, mutating residue 54 of the antibody VRC07 to tryptophan improves its binding to its antigen (HIV surface protein gp120)~\cite{VRC07_enhance}, but a design to recapitulate this mutation found it to be blocked by a steric clash unless CATS was used to find a backbone motion that escapes the clash~\cite{CATS}.  
+This flexibility is enabled by the CATS algorithm~\cite{CATS} (Fig.~\ref{fig:cats}).  CATS uses a new parameterization of backbone conformational space, along with the voxel framework that {\sc osprey} has always included.  It is equivalent to searching over all changes in backbone dihedrals ($\phi$ and $\psi$) subject to keeping the protein conformation constant outside of a specified flexible region. CATS includes an efficient Taylor series-based algorithm for computing atomic coordinates from its new degrees of freedom, enabling efficient energy minimization.  Unlike previous protein design algorithms with backbone flexibility, CATS routinely finds backbone motions on the order of an angstrom (in RMSD with respect to the wildtype backbone) while still performing a comprehensive search of its backbone conformation space.  In Ref.~\citen{CATS}, we have shown that backbone flexibility as modeled by CATS is sometimes critical for avoiding nonphysical steric clashes (Fig.~\ref{fig:cats}B,C) and often affects energetics significantly.  For example, mutating residue 54 of the antibody VRC07 to tryptophan improves its binding to its antigen (HIV surface protein gp120)~\cite{VRC07_enhance}, but a design to recapitulate this mutation found it to be blocked by a steric clash unless CATS was used to find a backbone motion that escapes the clash~\cite{CATS}.  
 
 CATS is intended to be run as part of the flexibility model for {\sc osprey}'s other algorithms, yielding efficient calculations with continuous flexibility in both the sidechains and the backbone. {\sc osprey}'s convenient interface allows a user to add CATS flexibility to a design merely by specifying the start and end points of the backbone segment to be made flexible.  
