--- a/references.bib
+++ b/references.bib
@@ -2272,6 +2272,17 @@
   organization={Springer}
 }
 
+@article{GROMACS_GPU,
+  title={{GROMACS}: High performance molecular simulations through multi-level parallelism from laptops to supercomputers},
+  author={Abraham, Mark James and Murtola, Teemu and Schulz, Roland and P{\'a}ll, Szil{\'a}rd and Smith, Jeremy C and Hess, Berk and Lindahl, Erik},
+  journal={SoftwareX},
+  volume={1},
+  pages={19-25},
+  year={2015},
+  publisher={Elsevier}
+}
+
+
 
 
 
