--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,6 @@
 For over a decade, the {\sc osprey} software package~\cite{OSPREY,minDEE,OSPREY_MIE} has offered the protein design community a unique combination of continuous flexibility modeling, ensemble modeling, and algorithms with provable guarantees.  Having begun as a software release for the $K^*$ algorithm, which approximates binding constants using ensemble modeling, it now boasts a wide array of algorithms found in no other software.  {\sc osprey} has been used in many designs that were empirically successful---\textit{in vitro}~\cite{VRC07_enhance,CFTR,runx1_cbfb,GrsA-LeuA,DHFR-PNAS,GrsA-TyrA,specific_probes} and \textit{in vivo}~\cite{VRC07_enhance,CFTR,runx1_cbfb,DHFR-PNAS} as well as in non-human primates~\cite{VRC07_enhance}.  {\sc osprey}'s predictions have been validated by a wide range of experimental methods, including binding assays, enzyme kinetics and activity assays, in cell assays (MICs, fitness) and viral neutralization, {\em in vivo} studies, and crystal structures~\cite{DHFR-PNAS2, VRC07_enhance}.    
 
-However, as {\sc osprey} grew to include more algorithms and features, the code became increasingly complicated and difficult to maintain.  The growing complexity of the software also hindered its ease-of-use. {\sc osprey} 3.0 represents a complete refactoring of the code, and presents a simpler and more intuitive interface that makes protein redesign much easier than before. The new, developer-friendly code organization also facilitates adding new features to the open-source project, both by ourselves and by other contributors.  We have introduced a convenient Python scripting interface and added support for GPU acceleration of the bulk of the computation, allowing designs to be completed much more quickly and easily than in previous versions of {\sc osprey}.  We believe {\sc osprey} 3.0 will be a very useful tool for both developers and users of provably accurate protein design algorithms.  
+However, as {\sc osprey} grew to include more algorithms and features, the code became increasingly complicated and difficult to maintain.  The growing complexity of the software also hindered its ease-of-use. {\sc osprey} 3.0 represents a complete refactoring of the code, and presents a simpler and more intuitive interface that makes protein redesign much easier than before. The new, developer-friendly code organization also facilitates adding new features to the free and open-source \osprey project, both by ourselves and by other contributors.  We have introduced a convenient Python scripting interface and added support for GPU acceleration of the bulk of the computation, allowing designs to be completed much more quickly and easily than in previous versions of {\sc osprey}.  We believe {\sc osprey} 3.0 will be a very useful tool for both developers and users of provably accurate protein design algorithms.  
 
 \jccsubsection{Past successes of {\sc osprey}}
 
@@ -8,7 +8,7 @@ However, as {\sc osprey} grew to include more algorithms and features, the code 
 
 For example, we have successfully predicted novel resistance mutations to new inhibitors in MRSA (methicillin-resistant~\textit{Staphylococcus aureus}), by searching for sequences that have impaired drug binding compared to wild-type DHFR, but still form the enzyme-substrate complex as usual, allowing catalysis~\cite{DHFR-PNAS,DHFR-PNAS2}.  Our predictions were validated not only biochemically and structurally, but also at an organismal level~\cite{DHFR-PNAS2, mimb_resistance}.  Similarly, we have successfully changed the preferred substrate of an enzyme---the phenylalanine adenylation domain of gramicidin S synthetase---from phenylalanine to leucine by modeling of the two enzyme-substrate complexes, searching for sequences with improved binding to leucine and less to phenylalanine~\cite{GrsA-LeuA}.  The resulting designer enzymes exhibited improved catalysis, and designs changing the specificity from phenlyalanine to several charged amino acids were successful as well.  
 
-Still other successes of {\sc osprey} have involved improving a single binding interaction, like the interaction of the antibody VRC07 with its antigen, the gp120 surface protein of HIV.  Using this approach, we collaborated with the NIH Vaccine Research Center to design a broadly neutralizing antibody (VRC07-523LS) against HIV with unprecedented breadth and potency that is now in clinical trials~\cite{VRC07_enhance,clinical605}.  We also have designed allosteric inhibitors for the leukemia-associated protein-protein interaction between Runx1 and CBF$\beta$~\cite{runx1_cbfb}.  Likewise, we have used {\sc osprey} to develop peptide inhibitors of CAL, a protein involved in cystic fibrosis~\cite{CFTR}.  This is a protein design problem of direct therapeutic significance that consists of optimizing a protein-protein binding interaction.  
+Still other successes of {\sc osprey} have involved improving a single binding interaction, like the interaction of the antibody VRC07 with its antigen, the gp120 surface protein of HIV.  Using this approach, we collaborated with the NIH Vaccine Research Center to design a broadly neutralizing antibody (VRC07-523LS) against HIV with unprecedented breadth and potency that is now in clinical trials (Clinical Trial Identifier: NCT03015181~\cite{VRC07_enhance,clinical605}).  We also have designed allosteric inhibitors for the leukemia-associated protein-protein interaction between Runx1 and CBF$\beta$~\cite{runx1_cbfb}.  Likewise, we have used {\sc osprey} to develop peptide inhibitors of CAL, a protein involved in cystic fibrosis~\cite{CFTR}.  This is a protein design problem of direct therapeutic significance that consists of optimizing a protein-protein binding interaction.  
 
 In addition, a number of other research groups have successfully used the {\sc osprey} algorithms and software (by themselves) to perform biomedically important protein designs, {\em e.g.,} to design anti-HIV antibodies that are easier to induce \cite{Georgiev:2014aa}; to design a soluble prefusion closed HIV-1-Env trimer with reduced CD4 affinity and improved immunogenicity~\cite{Gwo-yu17}; to design a transmembrane Zn$^{2+}$-transporting four-helix bundle~\cite{Joh14}; to optimize stability and immunogenicity of therapeutic proteins \cite{Parker:2013aa,Salvat:2015aa,Zhao:2015aa}; and to design sequence diversity in a virus panel and predict the epitope specificities of antibody responses to HIV-1 infection~\cite{polyclonal17}.
 
