--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,15 @@
 For over a decade, the {\sc osprey} software package~\cite{OSPREY,minDEE,OSPREY_MIE} has offered the protein design community a unique combination of continuous flexibility modeling, ensemble modeling, and algorithms with provable guarantees.  Having begun as a software release for the $K^*$ algorithm, which approximates binding constants using ensemble modeling, it now boasts a wide array of algorithms found in no other software.  {\sc osprey} has been used in many designs that were empirically successful---\textit{in vitro}~\cite{VRC07_enhance,CFTR,runx1_cbfb,GrsA-LeuA,DHFR-PNAS,GrsA-TyrA,specific_probes} and \textit{in vivo}~\cite{VRC07_enhance,CFTR,runx1_cbfb,DHFR-PNAS} as well as in non-human primates~\cite{VRC07_enhance}.  {\sc osprey}'s predictions have been validated by a wide range of experimental methods, including binding assays, enzyme kinetics and activity assays, in cell assays (MICs, fitness) and viral neutralization, {\em in vivo} studies, and crystal structures~\cite{DHFR-PNAS2, VRC07_enhance}.    
 
-However, as {\sc osprey} grew to include more algorithms and features, the code became increasingly complicated and difficult to maintain.  The growing complexity of the software also hindered its ease-of-use. {\sc osprey} 3.0 represents a complete refactoring of the code, and presents a simpler and more intuitive interface that makes protein redesign much easier than before. The new, developer-friendly code organization also facilitates adding new features to the free and open-source \osprey project, both by ourselves and by other contributors.  We have introduced a convenient Python scripting interface and added support for GPU acceleration of the bulk of the computation, allowing designs to be completed much more quickly and easily than in previous versions of {\sc osprey}.  We believe {\sc osprey} 3.0 will be a very useful tool for both developers and users of provably accurate protein design algorithms.  
+However, as {\sc osprey} grew to include more algorithms and features (Fig.~\ref{flowchart}), the code became increasingly complicated and difficult to maintain.  The growing complexity of the software also hindered its ease-of-use. {\sc osprey} 3.0 represents a complete refactoring of the code, and presents a simpler and more intuitive interface that makes protein redesign much easier than before. The new, developer-friendly code organization also facilitates adding new features to the free and open-source \osprey project, both by ourselves and by other contributors.  We have introduced a convenient Python scripting interface and added support for GPU acceleration of the bulk of the computation, allowing designs to be completed much more quickly and easily than in previous versions of {\sc osprey}.  We believe {\sc osprey} 3.0 will be a very useful tool for both developers and users of provably accurate protein design algorithms.  
+
+
+\begin{figure}
+\center
+\includegraphics[width=6in]{figures/osprey_mantra.png}
+ \vspace{-0.3in}%to fit the figure on one page
+\caption{The OSPREY protein redesign suite. (A) The input model includes a 3D structure of the protein to be redesigned, a definition of the sequence space, the allowed protein flexibility (including the rotamer library), and a pairwise energy function. (B) Rigid DEE, iMinDEE, EPIC, LUTE, DEEPer, and CATS model different types of protein flexibility. Flexibility ranges in difficulty from complete rigidity to continuous side chain flexibility to complete flexibility including continuous backbone flexibility. (C) The EPIC and LUTE algorithms also expand energy function capability by allowing for non-pairwise, basic QM and solvation. (D) COMETS allows for multi-state design by comparing various bound and unbound states. This allows for multiple input structures. (E) These algorithms are implemented in OSPREY and improved through the use of GPU acceleration. According to the allowed flexibility, OSPREY runs a specific pruning algorithm followed by the A* search algorithm. The A* output generates a ranking based on either the lowest-energy structure of each sequence, or an ensemble of structures computed by the K* algorithm. (F) The BWM* algorithm takes advantage of sparse trees and branch decomposition to outperform traditional A*. (G) The K* algorithm calculates a K* score (an approximation of the binding constant, $K_a$) by provably estimating the partition function for the protein, the ligand, and the protein-ligand complex. K* also takes advantage of an ensemble of structures as opposed to a single structure as illustrated in the panel (PDB ID: 3FQC). K* can also be used to find sequences that have a high affinity for one ligand (positive design) while having a low affinity for another (negative design) by taking a ratio of K* scores. }
+\label{flowchart}
+\end{figure}
 
 \jccsubsection{Past successes of {\sc osprey}}
 
