--- a/coverletter.tex
+++ b/coverletter.tex
@@ -20,19 +20,20 @@
 %\subsection{}
 
 
-Dear Editor, 
+Dear Madam/Sir, 
 \\
 
 We are writing to submit a manuscript entitled ``{\sc osprey} 3.0: Open-Source Protein Redesign for You, with Powerful New Features'' to the {\em Journal of Computational Chemistry}.  
 
 Protein and drug design algorithms enable the development of new therapeutics that might be impossible or too expensive to discover using experimental methods.  For over a decade, my lab has been working on the \osprey software package, which implements unique and powerful algorithms for this problem.  \osprey is distinguished by its combination of algorithms with provable guarantees of accuracy, modeling of continuous flexibility and free energy, and ability to search very large sequence spaces efficiently.  
 
-In this paper, we present the third major release of \osprey.  \osprey 3.0 offers substantial improvements in three areas: performance, new algorithms, and ease of use.  We believe the new algorithms significantly improve both efficiency and the realism of the biophysical model.  The performance and ease-of-use improvements will greatly facilitate the use of both the new and old algorithms in empirical designs.  Like previous version of \osprey, \osprey 3.0 is available as open-source, and unlike previous releases it is already available on Github.  This paper also presents benchmark results, which provide significant new evidence for the accuracy of the software and the algorithms and models from which it was built.  
+In this paper, we present the third major release of \osprey.  \osprey 3.0 offers substantial improvements in three areas: performance, new algorithms, and ease of use.  We believe the new algorithms significantly improve both efficiency and the realism of the biophysical model.  The performance and ease-of-use improvements will greatly facilitate the use of both the new and old algorithms in empirical designs.  Like previous versions of \osprey, \osprey 3.0 is available as open-source, and unlike previous releases it is already available on Github.  This paper also presents benchmark results, which provide significant new evidence for the accuracy of the software and the algorithms and models from which it was built.  
 
 What is new entails a vastly more efficient implementation of the algorithms, together with a Python front end for ease of use.  Finally, we have implemented GPU acceleration, which compares favorably in empirical tests to the previous landmark biophysics application of GPUs, molecular dynamics.  
 
 This work, therefore, is immediately applicable for both users and developers of protein design algorithms, and is also of interest to scientists interested in the biophysical modeling of proteins and in conformational search algorithms.  Its focus on improved computational modeling will be of interest to the computational chemistry community, and indeed several of the algorithms in \osprey were first published in the {\em Journal of Computational Chemistry}.  
 
+\bigskip
 We believe that the following scientists would be well qualified to review this work:
 \\
 
@@ -42,11 +43,14 @@ We believe that the following scientists would be well qualified to review this 
      \\\hspace{-0.285in} Gevorg Grigoryan \\Department of Computer Science, Dartmouth College \\6211 Sudikoff Lab, Hanover, NH 03755 \\Email: gevorg.grigoryan@dartmouth.edu \\
      \\\hspace{-0.285in} Ivelin Georgiev \\ Department of Pathology, Microbiology, and Immunology \\Vanderbilt University Medical Center \\ 1211 Medical Center Drive, Nashville, TN 37232  \\Email:  ivelin.georgiev@vanderbilt.edu \\
    \\\hspace{-0.285in} Chris Bailey-Kellogg \\Department of Computer Science, Dartmouth College \\6211 Sudikoff Lab, Hanover, NH 03755 \\Email: cbk@cs.dartmouth.edu \\
-   \\Due to competing interests, we request excluding the following people as potential reviewers: David Baker (University of Washington), Brian Kuhlman (University of North Carolina), and Tanja Kortemme (University of California, San Francisco).  
+   \bigskip
+   \\
+   Due to competing interests, we request excluding the following people as potential reviewers: David Baker (University of Washington), Brian Kuhlman (University of North Carolina), and Tanja Kortemme (University of California, San Francisco).  
    \\
    
    The corresponding author for this work is: 
- 
+ \bigskip
+ \\
     \hspace{-0.285in} Professor Bruce R. Donald \\Department of Computer Science, Duke University \\Department of Biochemistry, Duke University Medical Center  \\Department of Chemistry, Duke University \\Room D106, Levine Science Research Center \\Research Drive \\Durham, NC 27708 USA \\Phone: 919-660-6583 \\Fax: 919-660-6519 \\Email: brd+jcc18@cs.duke.edu \\
 
 \end{document}  
