Comments from Anna

--- a/LUTE.tex
+++ b/LUTE.tex
@@ -4,5 +4,5 @@ First, previous versions modeled continuous flexibility by enumerating conformat
 
 Second, all previous combinatorial protein design algorithms have relied on an explicit decomposition of the energy as a sum of local (e.g., pairwise) terms.  This made design with energy functions that do not have this form difficult. LUTE can straightforwardly support general energy functions, and, as shown in Ref.~\citen{LUTE_RECOMB}, it can obtain good fits at least in the case of Poisson-Boltzmann energies.  Moreover, once the LUTE precomputation is completed, the time cost of the asymptotically unfavorable combinatorial optimization step does not depend on the energy function used.  This is an enormous advantage for more expensive and accurate energy functions like Poisson-Boltzmann, which otherwise would be far too expensive for all but the smallest combinatorial optimization problems.  
 
-{\sc osprey} users can now turn on LUTE for continuously flexible calculations simply by setting a boolean flag. 
-{\sc osprey} 3.0 also supports design with Poisson-Boltzmann solvation energy calculations, which use the DelPhi~\cite{OSOR,DelPhi_surface} software for the single-point Poisson-Boltzmann calculations (we ask the user to download DelPhi separately for licensing reasons). Such improved modeling is essential to increasing the reliability of and range of feasible uses for computational protein design.  
+{\sc osprey} users can now turn on LUTE for continuously flexible calculations simply by setting a boolean flag (in the DEEGMECFinder Python constructor). 
+{\sc osprey} 3.0 also supports design with Poisson-Boltzmann solvation energy calculations, which call the DelPhi~\cite{OSOR,DelPhi_surface} software for the single-point Poisson-Boltzmann calculations (we ask the user to download DelPhi separately for licensing reasons). Such improved modeling is essential to increasing the reliability of and range of feasible uses for computational protein design.  
