--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -89,7 +89,7 @@ Protein design, drug design, GPU, structural biology, Python
 \includegraphics[width=0.35\textwidth]{figures/abstract_image.png} % Pick only one of the two styles by uncommenting the corresponding \includegraphics
 %\includegraphics[width=110mm,height=20mm]{cc.eps}
 \\
-We present the third major release of the OSPREY protein design software, along with comparisons to experimental data that confirm its ability to predict protein mutants with improved function.  \osprey 3.0 has significant efficiency, ease-of-use, and algorithmic improvements over previous versions, including GPU acceleration and a new Python interface.  
+We present the third major release of the OSPREY protein design software, along with comparisons to experimental data that confirm its ability to optimize protein mutants for desired functions.  \osprey 3.0 has significant efficiency, ease-of-use, and algorithmic improvements over previous versions, including GPU acceleration and a new Python interface.  
 \end{minipage}
 }}
 \end{figure}
