--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,2 +1,2 @@
-\osprey has long offered unique capabilities to protein designers.  In particular, it has always offered a unique combination of free energy-based modeling, provably accuracy conformational search, continuous flexibility, and efficient search over large sequence spaces.  In \osprey 3.0 we introduced software improvements that will make these algorithms much more practical for the wider design community: performance that is orders of magnitude faster, and a Python interface that makes \osprey much easier to use.  On top of this, we expanded the range of biophysical modeling assumptions that \osprey can accommodate, both in terms of molecular flexibility and energy functions.  As with previous versions, we are releasing \osprey 3.0 as free and open-source software to maximize its benefit to the community.  We hope this new version will be of significant utility to designers, whether they have used \osprey before or are trying it for the first time.  
+\osprey has long offered unique capabilities to protein designers.  In particular, it has always offered a unique combination of free energy-based modeling, provably accurate conformational search, continuous flexibility, and efficient search over large sequence spaces.  In \osprey 3.0 we introduced software improvements that will make these algorithms much more practical for the wider design community: performance that is orders of magnitude faster, and a Python interface that makes \osprey much easier to use.  On top of this, we expanded the range of biophysical modeling assumptions that \osprey can accommodate, both in terms of molecular flexibility and energy functions.  As with previous versions, we are releasing \osprey 3.0 as free and open-source software to maximize its benefit to the community.  We hope this new version will be of significant utility to designers, whether they have used \osprey before or are trying it for the first time.  
 
