--- a/discussion.tex
+++ b/discussion.tex
@@ -1,4 +1,4 @@
-\osprey has demonstrated its accuracy and utility in practice through many prospective designs that have performed well experimentally~\cite{VRC07_enhance,CFTR,runx1_cbfb,GrsA-LeuA,DHFR-PNAS,GrsA-TyrA,specific_probes}.  \osprey 3.0 is at least as accurate as the versions of \osprey used to perform these designs, because it can design using the same biophysical models used in those studies, with provable guarantees of accuracy given the biophysical model.  We have compared design results using \osprey 2.2 and \osprey 3.0 to confirm agreement.  However \osprey 3.0 can perform such designs much more efficiently, due to the engineering improvements described in this paper.  Moreover, in this paper we have performed additional comparisons to experimental data to confirm the accuracy of \osprey 3.0.  \osprey 3.0 also includes methods to improve the biophysical model and thus improve accuracy still further (should the user choose to employ the newer models). 
+\osprey has demonstrated its accuracy and utility in practice through many prospective designs that have performed well experimentally~\cite{VRC07_enhance,CFTR,runx1_cbfb,GrsA-LeuA,DHFR-PNAS,GrsA-TyrA,specific_probes}.  \osprey 3.0 is at least as accurate as the versions of \osprey used to perform these designs, because it can design using the same biophysical models used in those studies, with provable guarantees of accuracy given the biophysical model.  We have compared design results using \osprey 2.2 and \osprey 3.0 to confirm agreement.  However \osprey 3.0 can perform such designs much more efficiently, due to the engineering improvements described here.  Moreover, in this paper we have performed additional comparisons to experimental data to confirm the accuracy of \osprey 3.0.  \osprey 3.0 also includes methods to improve the biophysical model and thus improve accuracy still further (should the user choose to employ the newer models). 
 
 Computational protein design is still very much an unsolved problem~\cite{alg_SMB_textbook,cosb_design}.  No computational model can consistently and correctly predict the change in protein activity (e.g., binding) due to even a single mutation, and optimizing the change in activity over a large sequence space is a much harder problem than simply predicting it for one sequence.  Nevertheless, as our benchmark results here show, we have made substantial progress toward correctly predicting the effect of mutations on protein activity.  The combinatorial algorithms in \osprey can optimize protein activity---as estimated by the model validated in these benchmarks---over a large sequence space with provable accuracy.  No other software can optimize this model with such mathematical guarantees.  For example, the combination of provable algorithms with modeling of continuous protein flexibility and conformational entropy is unique to \osprey.   
 
